--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,18 @@
 /*  your css code here. If applicable */
+#grid-container {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: repeat(3, 24vw);
+	gap: 4px;
+	width: 100%;
+}
+
+.grid-item {
+	border: 1px solid black;
+}
+
+
+
+
+
+
